welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:18: error: value % is not a member of java.awt.Color
				setCouleurBrosse(T(i + decalage) % getMondeHauteur())
                                                                 ^