welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	var T =new Array[Color](getMondeHauteur())
	T(0)=getCouleurSol()
	while (!estFaceMur()){
		for (i <- 1 to getMondeHauteur()-1){
				T(i)=getCouleurSol()
			}
		}	
		for (i <- 0 to getMondeLargeur()-2){
			recule(5)
			gauche()
			avance()
			droite()
			val decalage = litMessage().toInt
			for (i <- 0 to getMondeHauteur()-1){
				avance()
				setCouleurBrosse(T(i + decalage) % getMondeHauteur())
				baisseBrosse()
				leveBrosse()
			}
		}
}	
